<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="10dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".CardActivity">

    <TextView
        android:id="@+id/txtNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="30sp"
        android:gravity="center"
        android:text="何問目" />

    <TextView
        android:id="@+id/txtQuestion"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:textSize="48sp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/card_style"
        android:gravity="center"
        android:text="リンゴ" />

    <Button
        android:id="@+id/btnAnswer"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="20dp"
        android:textSize="26sp"
        android:background="@drawable/press_effect"
        android:textColor="@color/white"
        android:text="@string/btnAnswerStr" />

    <TextView
        android:id="@+id/txtAnswer"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:textSize="48sp"
        android:gravity="center"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/card_style"
        android:text="苹果" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPrev"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:textSize="20sp"
            android:background="@drawable/press_effect"
            android:textColor="@color/white"
            android:text="@string/btnPrevStr" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:textSize="20sp"
            android:background="@drawable/press_effect"
            android:textColor="@color/white"
            android:text="@string/btnNextStr" />
    </LinearLayout>

    <Button
        android:id="@+id/btnClose"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="24dp"
        android:textSize="20sp"
        android:background="@drawable/press_effect"
        android:textColor="@color/white"
        android:text="@string/btnCloseStr" />


</LinearLayout>